// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client { // สร้าง Prisma Client สำหรับใช้ query database ผ่าน JavaScript
  provider = "prisma-client-js" // generator ตัวนี้จะใช้ Prisma Client JS
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum Role {
  USER
  ADMIN
  SUPER_ADMIN
}

enum BookingStatus {
  DRAFT 
  PENDING 
  PAID 
  FAILED 
  CANCELLED 
}

enum PaymentMethod {
  CREDIT_CARD 
  BANK_TRANSFER 
}

enum PaymentStatus {
  PENDING 
  PAID 
  FAILED 
  CANCELLED 
}

// เริ่มสร้าง Datasource เพื่อเรียกใช้งาน
model User {
  id                  Int       @id @default(autoincrement()) // ออโต้เลขอัตโนมัติ เวลาเพิ่มฐานข้อมูลใหม่ลงไป
  email               String    @unique @db.VarChar(255) // กำหนดเป็น String ห้ามซ้ำใน DB
  username            String    @unique // กำหนดเป็น String ห้ามซ้ำใน DB
  password            String 
  phone               String    @db.VarChar(20)
  role                Role      @default(USER) // ทำงานฝั่ง DB เมื่อมีการสร้างผู้ใช้ใหม่โดยไม่ได้ระบุ role → DB จะกำหนดให้เป็น "USER" อัตโนมัติ
  enable              Boolean   @default(true) // เอาไว้เปิดปิดผู้ใช้งาน คือถ้าคุณสมัครปุ๊บ ก็สามารถเข้าใช้งานได้เลย
  address             String? // เป็นค่าว่างได้ด้วย เพราะบางทีผู้ใช้อาจจะยังไม่ได้กรอกที่อยู่ตั้งแต่แรก
  createdDate         DateTime  @default(now()) // บันทึก time stamp เวลาลงฐานข้อมูลครั้งแรก 
  updatedDate         DateTime  @updatedAt // เมื่อมีการแก้ไข จะ stamp เวลาปัจจุบันไปเรื่อยๆ ตามจำนวนที่เราอัพเดต
  resetPasswordToken  String?   @db.VarChar(64)
  resetPasswordExpire DateTime?
  booking             Booking[] @relation("UserToBookings") // หนึ่ง User สามารถมีการจองได้หลายครั้ง 
}

model TourPackage {
  id              Int       @id @default(autoincrement())
  title           String
  tourCode        String    @unique
  categoryId      Int // FK เชื่อมกับ Category
  countryId       Int // FK เชื่อมกับ Country 
  isRecommend     Boolean   @default(false)
  isActive        Boolean   @default(true)
  isAlmostFull    Boolean   @default(false)
  airline         String    @default("")
  starRating      Int       @default(0)
  itinerary       String    @db.Text
  priceDetails    String    @default("")
  duration        String
  priceAdult      Float
  priceChild      Float
  singleStayExtra Float
  priceVisa       Int       @default(0)
  priceGuide      Int       @default(0)
  maxSeats        Int       @default(0)
  sold            Int       @default(0) 
  startDate       DateTime
  endDate         DateTime
  createdDate     DateTime  @default(now())
  updatedDate     DateTime  @updatedAt
  booking         Booking[] @relation("TourPackageToBookings")
  images          Image[]
  tourPDF         TourPDF?
  category        Category? @relation(fields: [categoryId], references: [id]) 
  country         Country?  @relation(fields: [countryId], references: [id])
}

model Category {
  id          Int           @id @default(autoincrement())
  name        String        @unique
  createdDate DateTime      @default(now()) // เวลาเรามีข้อมูลลงฐานข้อมูล ครั้งแรก เค้าก็จะบันทึก time stamp เวลา ณ ปัจจุบันที่ลงฐานข้อมูลไว้
  updatedDate DateTime      @updatedAt // เมื่อมีการแก้ไข เค้าก็จะ stamp เวลาปัจจุบัน ที่มีการแก้ไข ไปเรื่อยๆ ตามจำนวนที่เราอัพเดต
  TourPackage TourPackage[]
}

model Country {
  id          Int           @id @default(autoincrement())
  name        String        @unique
  createdDate DateTime      @default(now()) // เวลาเรามีข้อมูลลงฐานข้อมูล ครั้งแรก เค้าก็จะบันทึก time stamp เวลา ณ ปัจจุบันที่ลงฐานข้อมูลไว้
  updatedDate DateTime      @updatedAt // เมื่อมีการแก้ไข เค้าก็จะ stamp เวลาปัจจุบัน ที่มีการแก้ไข ไปเรื่อยๆ ตามจำนวนที่เราอัพเดต
  TourPackage TourPackage[]
}

model Booking {
  id              Int           @id @default(autoincrement())
  userId          Int // FK ที่อ้างถึง User.id
  tourPackageId   Int // FK ที่อ้างถึง TourPackage.id
  adultCount      Int           @default(0) // จำนวนผู้ใหญ่
  childCount      Int           @default(0) // จำนวนเด็ก
  singleStayCount Int           @default(0) // ผู้ใช้ต้องการเลือกพักเดี่ยวหรือไม่ ถ้า true คิดเงิน false ไม่คิด
  totalPrice      Decimal       @db.Decimal(10, 2)
  bookingStatus   BookingStatus @default(DRAFT) // ต้องมี status default เพื่อบอกว่ายังไม่มีค่า process
  createdDate     DateTime      @default(now()) // เวลาเรามีข้อมูลลงฐานข้อมูล ครั้งแรก เค้าก็จะบันทึก time stamp เวลา ณ ปัจจุบันที่ลงฐานข้อมูลไว้
  updatedDate     DateTime      @updatedAt // เมื่อมีการแก้ไข เค้าก็จะ stamp เวลาปัจจุบัน ที่มีการแก้ไข ไปเรื่อยๆ ตามจำนวนที่เราอัพเดต
  // ความสัมพันธ์
  user            User          @relation(fields: [userId], references: [id], name: "UserToBookings", onDelete: Cascade) // เมื่อ User ถูกลบ ข้อมูล Booking ที่มีการเชื่อมโยงกับ userId จะถูกลบด้วย
  tourPackage     TourPackage   @relation(fields: [tourPackageId], references: [id], name: "TourPackageToBookings", onDelete: Cascade) //เมื่อ TourPackage ถูกลบ ข้อมูล Booking ที่มีการเชื่อมโยงกับ tourPackageId จะถูกลบด้วย
  Payment         Payment?
}

model Image {
  id            Int         @id @default(autoincrement())
  tourPackageId Int // FK ที่อ้างถึง TourPackage.id
  asset_id      String //ต้องใช้ เพราะเราจะใช้ cloudinary คือการอัพไฟล์รูปไปบน cloud
  public_id     String
  url           String
  secure_url    String
  createdDate   DateTime    @default(now()) // เวลาเรามีข้อมูลลงฐานข้อมูล ครั้งแรก เค้าก็จะบันทึก time stamp เวลา ณ ปัจจุบันที่ลงฐานข้อมูลไว้
  updatedDate   DateTime    @updatedAt // เมื่อมีการแก้ไข เค้าก็จะ stamp เวลาปัจจุบัน ที่มีการแก้ไข ไปเรื่อยๆ ตามจำนวนที่เราอัพเดต
  tourPackage   TourPackage @relation(fields: [tourPackageId], references: [id], onDelete: Cascade) // เมื่อ TourPackage ถูกลบ รูปภาพ ที่มีการเชื่อมโยงกับ tourPackageId ก็จะถูกลบไปด้วย
}

model TourPDF {
  id            Int         @id @default(autoincrement())
  tourPackageId Int         @unique // FK ที่อ้างถึง TourPackage.id
  asset_id      String      // Cloudinary asset_id
  public_id     String      // Cloudinary public_id (ใช้สำหรับลบไฟล์)
  url           String      // URL ปกติที่ cloudinary ให้มา
  secure_url    String      // URL แบบ https
  createdDate   DateTime    @default(now())
  updatedDate   DateTime    @updatedAt
  tourPackage   TourPackage @relation(fields: [tourPackageId], references: [id], onDelete: Cascade) // เมื่อ TourPackage ถูกลบ PDF ที่มีการเชื่อมโยงกับ tourPackageId ก็จะถูกลบไปด้วย
}

model Payment {
  id            Int           @id @default(autoincrement())
  bookingId     Int           @unique
  amount        Decimal       @db.Decimal(10, 2) // แนะนำใช้ Decimal สำหรับเงิน
  paymentMethod PaymentMethod
  paymentStatus PaymentStatus @default(PENDING)
  transactionId String?
  paymentDate   DateTime?
  secure_url    String?       // URL แบบ https
  public_id     String?     
  bankName      String?
  createdDate   DateTime      @default(now())
  updatedDate   DateTime      @updatedAt
  booking       Booking       @relation(fields: [bookingId], references: [id], onDelete: Cascade) // เมื่อลบ Booking → Payment ที่เชื่อมโยงจะถูกลบด้วย
}

// เหตุผลที่ควรใช้ onDelete: Cascade
// 1. สำหรับ User → Booking
// เหตุผลทางธุรกิจ: หากลูกค้า (User) ถอนตัวหรือปิดบัญชี
// การจองทั้งหมดของลูกค้าควรยกเลิกโดยอัตโนมัติ
// ป้องกันการมี "Booking ลอยๆ" ที่ไม่มีเจ้าของ

// เหตุผลทางเทคนิค: รักษาความสัมพันธ์เชิงข้อมูล (Referential Integrity)

// 2. สำหรับ Booking → Payment
// เหตุผลทางธุรกิจ: เมื่อยกเลิกการจอง
// ข้อมูลการชำระเงินที่เกี่ยวข้องควรหายไปด้วย

// ป้องกันการมี "Payment ลอยๆ" ที่ไม่มี Booking อ้างอิง
