%%{init: {
  'theme': 'base',
  'themeVariables': {
    'background': '#ffffff',
    'primaryColor': '#e3f2fd',
    'primaryTextColor': '#000000',
    'primaryBorderColor': '#1976d2',
    'lineColor': '#333333',
    'secondaryColor': '#f5f5f5',
    'tertiaryColor': '#ffffff',
    'entityLabelColor': '#000000',
    'relationLabelColor': '#000000',
    'attributeBackgroundColorOdd': '#f8f9fa',
    'attributeBackgroundColorEven': '#ffffff'
  }
}}%%

erDiagram
    User {
        int id PK
        string email UK
        string username UK
        string password
        string name
        string surname
        string phone
        enum role
        boolean enable
        string address
        datetime createdDate
        datetime updatedDate
        string resetPasswordToken
        datetime resetPasswordExpire
    }

    TourPackage {
        int id PK
        string title
        string tourCode UK
        int categoryId FK
        int countryId FK
        boolean isRecommend
        boolean isActive
        boolean isAlmostFull
        string airline
        int starRating
        text itinerary
        string priceDetails
        string duration
        float priceAdult
        float priceChild
        float singleStayExtra
        int priceVisa
        int priceGuide
        int maxSeats
        int sold
        datetime startDate
        datetime endDate
        datetime createdDate
        datetime updatedDate
    }

    Category {
        int id PK
        string name UK
        datetime createdDate
        datetime updatedDate
    }

    Country {
        int id PK
        string name UK
        datetime createdDate
        datetime updatedDate
    }

    Booking {
        int id PK
        int userId FK
        int tourPackageId FK
        int adultCount
        int childCount
        int singleStayCount
        decimal totalPrice
        enum bookingStatus
        datetime createdDate
        datetime updatedDate
    }

    Payment {
        int id PK
        int bookingId FK
        decimal amount
        enum paymentMethod
        enum paymentStatus
        string transactionId
        datetime paymentDate
        string secure_url
        string public_id
        string bankName
        datetime createdDate
        datetime updatedDate
    }

    Image {
        int id PK
        int tourPackageId FK
        string asset_id
        string public_id
        string url
        string secure_url
        datetime createdDate
        datetime updatedDate
    }

    TourPDF {
        int id PK
        int tourPackageId FK
        string asset_id
        string public_id
        string url
        string secure_url
        datetime createdDate
        datetime updatedDate
    }

    %% Relationships
    User ||--o{ Booking : "หนึ่ง User มีการจองได้หลายครั้ง"
    TourPackage ||--o{ Booking : "หนึ่ง TourPackage สามารถถูกจองได้หลายครั้ง"
    Category ||--o{ TourPackage : "หนึ่ง Category มี TourPackage ได้หลายตัว"
    Country ||--o{ TourPackage : "หนึ่ง Country มี TourPackage ได้หลายตัว"
    Booking ||--|| Payment : "หนึ่ง Booking มี Payment หนึ่งตัว"
    TourPackage ||--o{ Image : "หนึ่ง TourPackage มีรูปภาพได้หลายรูป"
    TourPackage ||--|| TourPDF : "หนึ่ง TourPackage มี PDF หนึ่งไฟล์"